[gd_scene load_steps=33 format=2]

[ext_resource path="res://EnemyMushroom.gd" type="Script" id=1]
[ext_resource path="res://mushroomman_new-export.png" type="Texture" id=2]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerDetectionZone.gd" type="Script" id=4]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemyStat.tscn" type="PackedScene" id=6]
[ext_resource path="res://HurtBox.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 46.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.0
height = 4.0

[sub_resource type="Animation" id=5]
resource_name = "MushroomAngryWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=14]
resource_name = "MushroomAttack"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "MushroomIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=15]
resource_name = "MushroomWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "MushroomAttack"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "MushroomAngryWalk"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "MushroomIdle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "MushroomWalk"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/attack/node = SubResource( 16 )
states/attack/position = Vector2( 465, 136 )
states/chase/node = SubResource( 17 )
states/chase/position = Vector2( 618, 72 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 297, 82 )
states/wander/node = SubResource( 8 )
states/wander/position = Vector2( 459, 5 )
transitions = [ "idle", "wander", SubResource( 9 ), "wander", "idle", SubResource( 10 ), "wander", "chase", SubResource( 18 ), "chase", "wander", SubResource( 19 ), "idle", "attack", SubResource( 20 ), "attack", "idle", SubResource( 21 ), "attack", "chase", SubResource( 22 ), "chase", "attack", SubResource( 23 ), "attack", "wander", SubResource( 24 ), "wander", "attack", SubResource( 25 ) ]
start_node = "idle"
graph_offset = Vector2( -55, -45 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )
hframes = 4
vframes = 6
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 16
collision_mask = 5
damage = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 13 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MushroomAngryWalk = SubResource( 5 )
anims/MushroomAttack = SubResource( 14 )
anims/MushroomIdle = SubResource( 4 )
anims/MushroomWalk = SubResource( 15 )
anims/RESET = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="ResetTimer" type="Timer" parent="."]
process_priority = -100
wait_time = 6.0
one_shot = true

[node name="ShootingTimer" type="Timer" parent="."]

[node name="EnemyStat" parent="." instance=ExtResource( 6 )]

[connection signal="start_invincibility" from="." to="HurtBox" method="_on_Enemy_start_invincibility"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]

[editable path="HitBox"]
